# bible-reading-calendar

./: .gitignore  .gitmodules  LICENSE  README.md  bible-reading-plan.csv  cms_config.js  config.txt  config_en.txt  config_en_boy.txt  configure.ac  run_cli.sh  run_cms.sh
bible-reading-plans/: new-testament-and-psalms_1-year_312.csv  new-testament-and-psalms_1-year_313.csv  new-testament-and-psalms_1-year_365.csv  new-testament_1-year_260.csv  new-testament_1-year_261.csv  old-testament_1-year_312.csv  old-testament_1-year_313.csv  old-testament_1-year_365.csv  old-testament_2-years-1st_312.csv  old-testament_2-years-1st_313.csv  old-testament_2-years-1st_365.csv  old-testament_2-years-2nd_312.csv  old-testament_2-years-2nd_313.csv  old-testament_2-years-2nd_365.csv  whole-bible-in-parallel_1-year_312.csv  whole-bible-in-parallel_1-year_313.csv  whole-bible-in-parallel_1-year_365.csv  whole-bible-in-parallel_2-years-1st_312.csv  whole-bible-in-parallel_2-years-1st_313.csv  whole-bible-in-parallel_2-years-1st_365.csv  whole-bible-in-parallel_2-years-2nd_312.csv  whole-bible-in-parallel_2-years-2nd_313.csv  whole-bible-in-parallel_2-years-2nd_365.csv  whole-bible-new-testament-first_1-year_312.csv  whole-bible-new-testament-first_1-year_313.csv  whole-bible-new-testament-first_1-year_365.csv  whole-bible-new-testament-first_2-years-1st_312.csv  whole-bible-new-testament-first_2-years-1st_313.csv  whole-bible-new-testament-first_2-years-1st_365.csv  whole-bible-new-testament-first_2-years-2nd_312.csv  whole-bible-new-testament-first_2-years-2nd_313.csv  whole-bible-new-testament-first_2-years-2nd_365.csv  whole-bible_1-year_312.csv  whole-bible_1-year_313.csv  whole-bible_1-year_365.csv  whole-bible_2-years-1st_312.csv  whole-bible_2-years-1st_313.csv  whole-bible_2-years-1st_365.csv  whole-bible_2-years-2nd_312.csv  whole-bible_2-years-2nd_313.csv  (+1 more)
lighttpd_conf/: 10-fastcgi.conf  10-rewrite.conf
src/: CMakeLists.txt  Makefile.am  calendar.cpp  calendar.h  conf-dev.js  conf-prod.js  config.pb.cc  config.pb.h  config.proto  main.cpp  main_cli.cpp  main_cms.cpp
web-ui/: angular.json  build_dev.sh  build_prod.sh  messages.xlf  package-lock.json  package.json
web-ui/src/: index.html  styles.sass
web-ui/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.sass  app.component.ts  app.module.ts
web-ui/src/app/about/: about.component.html  about.component.sass
web-ui/src/app/builder/: builder.component.css  builder.component.html  builder.component.sass  builder.component.ts
web-ui/src/locale/: messages.ko.xlf
